rel-tverberg branch

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-version=3.11.0
+version=3.10.3
 # Default build profile
 profile=Java
 # Branch codename (filled by releases)
-codename=bleeding_edge
+codename=tverberg
 # Run findbugs
 runFindbugs=false
 # Produce java6 bytecode only if running on top of jenkins and JAVA_6_HOME is available
